Refactoring of the domain config and avoid restaging incase of memory resizing
* Use app name to decide on domain name and server instance name
* Support storage of transaction logs on database using use_for_tlogs
  flags against a datasource
* Scale up or down the heap settings for the server instance based on
  actual memory limits without requiring restaging
* Add jvm arguments to identify the process within DEA
* Modify the instance name to use space and instance-index to
  distinguish across multiple instances of the same application across spaces